<resources>
    <string name="app_name">WhatsAppClone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with">Login with...</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="write_message_here">Write message here...</string>
    <string name="enter_verification_number">Enter Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="received">received</string>
    <string name="send_request">send_request</string>
    <string name="request_sent">request_sent</string>
    <string name="request_received">request_received</string>
    <string name="friends">friends</string>
    <string name="new_request">new_request</string>
    <string name="sent">sent</string>
    <string name="saved">saved</string>
    <string name="cancel_a_request">Cancel Request</string>
    <string name="accept_a_request">Accept Request</string>
    <string name="send_a_request">Send Request</string>
    <string name="remove_contact">Remove Contact</string>
</resources>
