<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/people_talking"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"/>

            <ProgressBar
                android:id="@+id/login_progress"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_below="@id/login_image"
                style="@style/Widget.AppCompat.Spinner"
                android:max="100"
                android:background="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_image"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:layout_marginTop="24dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:layout_marginTop="24dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp" />

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_password"
                android:text="@string/forgot_password"
                android:padding="4dp"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="4dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_forgot_password"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons" />

            <TextView
                android:id="@+id/login_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_button"
                android:text="@string/sign_up"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp" />

            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_sign_up"
                android:text="@string/login_with"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp" />

            <Button
                android:id="@+id/login_phone_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_using"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/baseline_call_24"/>

        </RelativeLayout>
        
    </ScrollView>

</RelativeLayout>