<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/people_talking2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_image"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:layout_marginTop="24dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:layout_marginTop="24dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons" />

    <TextView
        android:id="@+id/register_already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_button"
        android:text="@string/already_have_an_account"
        android:padding="4dp"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp" />

    <ProgressBar
        android:id="@+id/register_progress"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/register_image"
        style="@style/Widget.AppCompat.Spinner"
        android:max="100"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>