<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity">

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="180dp"
        android:padding="8dp"
        android:inputType="phone"
        android:textSize="15sp"
        android:textAlignment="center"
        android:drawableStart="@drawable/baseline_call_24" />

    <EditText
        android:id="@+id/phone_verification_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/phone_number_input"
        android:padding="8dp"
        android:hint="@string/enter_verification_number"
        android:textSize="15sp"
        android:textAlignment="center"
        android:visibility="invisible"
        android:drawableStart="@drawable/baseline_lock_24" />

    <Button
        android:id="@+id/send_verification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_verification_code"
        android:layout_below="@id/phone_verification_input"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/background_light"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_below="@id/send_verification_button"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons"
        android:textColor="@android:color/background_light"
        android:textSize="18dp"
        android:textAlignment="center"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/register_phone_progress"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/verify_button"
        style="@style/Widget.AppCompat.Spinner"
        android:max="100"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>